
=== Enhancements

* The macOS build platform for the {ml} C++ code is now High Sierra running Xcode 10.1,
  or Ubuntu 18.04 running clang 6.0 for cross compilation. (See {ml-pull}867[#867].)

== {es} version 7.7.0

=== New Features

* Add instrumentation to report statistics related to data frame analytics jobs, i.e.
progress, memory usage, etc. (See {ml-pull}906[#906].)

=== Enhancements

* Improve initialization of learn rate for better and more stable results in regression
and classification. (See {ml-pull}948[#948].)
* Add number of processed training samples to the definition of decision tree nodes.
(See {ml-pull}991[#991].)
* Add new model_size_stats fields to instrument categorization.  (See {ml-pull}948[#948]
and {pull}51879[#51879], issue: {issue}50794[#50749].)
* Improve upfront memory estimation for all data frame analyses, which were higher than
necessary. This will improve the allocation of data frame analyses to cluster nodes.
(See {ml-pull}1003[#1003].)

=== Bug Fixes

* Use largest ordered subset of categorization tokens for category reverse search regex.
(See {ml-pull}970[#970], issue: {ml-issue}949[#949].)
* Account for the data frame's memory when estimating the peak memory used by classification
and regression model training. (See {ml-pull}996[#996].)

== {es} version 7.6.0

=== New Features

* Add feature importance values to classification and regression results (using tree
SHapley Additive exPlanation, or SHAP). (See {ml-pull}857[#857].)

=== Enhancements

* Improve performance of boosted tree training for both classification and regression.
(See {ml-pull}775[#775].)
* Reduce the peak memory used by boosted tree training and fix an overcounting bug
estimating maximum memory usage. (See {ml-pull}781[#781].)
* Stratified fractional cross validation for regression. (See {ml-pull}784[#784].)
* Added `geo_point` supported output for `lat_long` function records. (See {ml-pull}809[#809]
and {pull}47050[#47050].)